Update css link
too lazy to make a folder; sue me

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>To Do List · Home</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="css/main.css" rel="stylesheet">
+  <link href="main.css" rel="stylesheet">
 </head>
 <body>
 
