Add some ideas to the list

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 
   <main>
     <h1>Wow but this list though</h1>
+    <ul>
+      <li>Trip to Maritimes</li>
+      <li>Trip to BC (Jasper, Enchanted Forest and Kimberley)</li>
+      <li>Photo in front of MacKenzie Art Gallery ("I always knew I was a work of art" or other joke)</li>
+      <li>Stanley Parable</li>
+      <li>Life is Strange</li>
+    </ul>
   </main>
 
 </body>
