Add learn Rust to list

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li>Photo in front of MacKenzie Art Gallery ("I always knew I was a work of art" or other joke)</li>
       <li>Stanley Parable</li>
       <li>Life is Strange</li>
+      <li>Learn Rust</li>
     </ul>
   </main>
 
