Add new game, strike out completed item

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
       <li>Trip to Maritimes</li>
       <li>Trip to BC (Jasper, Enchanted Forest and Kimberley)</li>
       <li>Photo in front of MacKenzie Art Gallery ("I always knew I was a work of art" or other joke)</li>
-      <li>Stanley Parable</li>
+      <li><strike>Stanley Parable</strike></li>
       <li>Life is Strange</li>
       <li>Learn Rust</li>
+      <li>It Takes Two (game)</li>
     </ul>
   </main>
 
