Add cooking date

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <li>Life is Strange</li>
       <li>Learn Rust</li>
       <li>It Takes Two (game)</li>
+      <li>Virtual cooking date with Jo</li>
     </ul>
   </main>
 
