Add Roughrider game to list

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <li>Learn Rust</li>
       <li>It Takes Two (game)</li>
       <li>Virtual cooking date with Jo</li>
+      <li>Saskatchewan Roughriders game</li>
     </ul>
   </main>
 
