Add a useful link and one to-do

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
       <li>It Takes Two (game)</li>
       <li>Virtual cooking date with Jo</li>
       <li>Saskatchewan Roughriders game</li>
+      <li>Walk around the Ledge</li>
+    </ul>
+    
+    <h2>Other useful links</h2>
+    <ul>
+      <li><a href="https://docs.google.com/spreadsheets/d/1WPcNe--J3Ys9d__7W-aE8I79obxs8TOLiDv7V25rLjw/edit#gid=2140919263">Christmas Spreadsheet</a></li>
     </ul>
   </main>
 
