Add more things
Am trying very hard to not add ALL the things

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       <li>Virtual cooking date with Jo</li>
       <li>Saskatchewan Roughriders game</li>
       <li>Walk around the Ledge</li>
+      <li><strike>Dampen keyboard</strike></li>
+      <li>Build a PC with MacKenzie</li>
     </ul>
     
     <h2>Other useful links</h2>
