--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <li>Walk around the Ledge</li>
       <li><strike>Dampen keyboard</strike></li>
       <li>Build a PC with MacKenzie</li>
+      <li>Interprovincial Zipline</li>
     </ul>
     
     <h2>Other useful links</h2>
